--- a/src/pages/TutorPage/TutorPage.module.scss
+++ b/src/pages/TutorPage/TutorPage.module.scss
@@ -104,6 +104,7 @@
 }
 
 .section {
+  min-height: 100svh;
   margin-top: $space-8;
   @include m.glass-panel;
   padding: $space-6;
